fixed some spacing

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -151,7 +151,7 @@ color: #FFFFFF;
   width: 200.01px;
   height: 0px;
   left: 174px;
-  top: 99px;
+  top: 110px;
   border: 20px solid #93b8f5;
   transform: rotate(0.31deg);
 }
